[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Editor.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 20.0
text = "Load picture"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 891.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="ReferenceRect" type="ReferenceRect" parent="VBoxContainer/HBoxContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 881.0
margin_bottom = 566.0
size_flags_horizontal = 3
size_flags_vertical = 3
border_color = Color( 0, 0, 0, 1 )
border_width = 2.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 881.0
margin_bottom = 566.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 895.0
margin_right = 1024.0
margin_bottom = 576.0

[node name="ButtonAddItem" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 129.0
margin_bottom = 20.0
text = "Add Item"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 129.0
margin_bottom = 160.0
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
margin_top = 5.0
margin_right = 51.0
margin_bottom = 19.0
text = "Char ID:"

[node name="SpinBoxId" type="SpinBox" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
margin_left = 55.0
margin_right = 129.0
margin_bottom = 24.0
max_value = 800.0
step = 1.0
align = 2

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
margin_top = 33.0
margin_right = 51.0
margin_bottom = 47.0
text = "Top:"

[node name="SpinBox2Top" type="SpinBox" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
margin_left = 55.0
margin_top = 28.0
margin_right = 129.0
margin_bottom = 52.0
max_value = 800.0
step = 2.0
align = 2

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
margin_top = 61.0
margin_right = 51.0
margin_bottom = 75.0
text = "Left:"

[node name="SpinBox3Left" type="SpinBox" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
margin_left = 55.0
margin_top = 56.0
margin_right = 129.0
margin_bottom = 80.0
max_value = 800.0
step = 2.0
align = 2

[node name="Label4" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
margin_top = 89.0
margin_right = 51.0
margin_bottom = 103.0
text = "Width"

[node name="SpinBox4Width" type="SpinBox" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
margin_left = 55.0
margin_top = 84.0
margin_right = 129.0
margin_bottom = 108.0
max_value = 800.0
step = 2.0
align = 2

[node name="Label5" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
margin_top = 117.0
margin_right = 51.0
margin_bottom = 131.0
text = "Height"

[node name="SpinBoxHeight" type="SpinBox" parent="VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
margin_left = 55.0
margin_top = 112.0
margin_right = 129.0
margin_bottom = 136.0
max_value = 800.0
step = 2.0
align = 2

[node name="ItemList" type="ItemList" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 164.0
margin_right = 129.0
margin_bottom = 173.0
auto_height = true

[node name="ButtonRemoveItem" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 177.0
margin_right = 129.0
margin_bottom = 197.0
text = "Remove Item"

[node name="FileDialog" type="FileDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 400, 140 )
size_flags_horizontal = 3
size_flags_vertical = 3
window_title = "Open PNG"
dialog_hide_on_ok = true
mode = 0
access = 2
filters = PoolStringArray( "*.png" )
current_dir = "/programaths/Documents/FontGen"
current_path = "/programaths/Documents/FontGen/"
__meta__ = {
"_edit_use_anchors_": false
}
